Bug 527018 - [refactoring] Replace use of Number constructors by valueOf
Change-Id: Ic80547adfda217ced4174be7efb43392ac69b786
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>