@@ -1431,7 +1431,7 @@ void initAccessible() {
 				if (text != null) {
 					char mnemonic = _findMnemonic(text);
 					if (mnemonic != '\0') {
-						shortcut = SWT.getMessage ("SWT_Page_Mnemonic", new Object[] {new Character(mnemonic)}); //$NON-NLS-1$
+						shortcut = SWT.getMessage ("SWT_Page_Mnemonic", new Object[] {Character.valueOf(mnemonic)}); //$NON-NLS-1$
 					}
 				}
 			}
